# Autonomous-GitOps-Auto-Remediation-Platform

./: .env.example  .gitignore  Makefile  README.md  USAGE_GUIDE.md  index.html  kind-config.yaml  metadata.json  package-lock.json  package.json  policy.yaml  setup.sh  start.bat  start.sh
.github/workflows/: ci.yml  integration.yml  terraform-validate.yml  webui.yml
agent/: .golangci.yml  go.mod  go.sum
agent/cmd/autosre/: audit.go  diagnose.go  main.go  notify.go  policy.go  remediate.go  run.go  verify.go
agent/internal/api/: alertmanager.go  alertmanager_test.go  api.go  api_test.go  auth.go  gitops.go  gitops_test.go  integrations.go  integrations_test.go  llm.go  llm_test.go  notifications.go  notifications_test.go  reveal.go  reveal_test.go  safety.go  spa_test.go
agent/internal/audit/: audit.go  audit_test.go  file_sink.go  memory_sink.go  multi_sink.go  webhook_sink.go
agent/internal/config/: config.go
agent/internal/contracts/: contracts.go  contracts_test.go
agent/internal/correlator/: correlator.go  correlator_bench_test.go  correlator_test.go
agent/internal/diagnosis/: client.go  client_test.go
agent/internal/gitwriter/: gitwriter.go  gitwriter_test.go  manifest.go  quantity.go
agent/internal/ingestor/: ingestor.go  k8s.go  k8s_test.go  loki.go  loki_reload_test.go  webhook.go  webhook_test.go
agent/internal/k8sdetect/: k8sdetect.go  k8sdetect_test.go
agent/internal/metrics/: metrics.go
agent/internal/notifier/: composite.go  composite_internal_test.go  doc.go  mock.go  notifier_test.go  pagerduty.go  registry.go  slack.go
agent/internal/orchestrator/: builder.go  orchestrator.go  orchestrator_test.go  pipeline.go
agent/internal/outcome/: client.go  outcome.go
agent/internal/policy/: circuitbreaker.go  config.go  engine.go  engine_test.go  packs.go
agent/internal/remediator/: bump_memory.go  doc.go  patch_hpa.go  remediator_test.go  scale.go  (+3 more)
api/: analyze-nvidia.ts
charts/: README.md
charts/autosre/: Chart.yaml  values.yaml
diagnoser/: pyproject.toml
diagnoser/diagnoser/: __init__.py  contracts.py  core.py  main.py  server.py
diagnoser/diagnoser/providers/: __init__.py  gemini.py  nim.py  rule_based.py
diagnoser/tests/: test_contracts.py  test_core.py  test_providers.py  test_server.py
docs/: CHANGELOG.md  CONVENTIONS.md  ERROR_LOG.md  OPERATOR_RUNBOOK.md  PRD_STATUS.md  PRODUCTION_READINESS_ROADMAP.md  PROJECT_PROGRESS.md  README_STANDARD.md  openapi.yaml
gitops/: README.md  autosre-app.yaml
infra/: README.md  aks.tf  eks.tf  gke.tf  iam.tf  main.tf  observability.tf  outputs.tf  variables.tf  vpc.tf
learner/: pyproject.toml
learner/learner/: __init__.py  aggregator.py  contracts.py  main.py  server.py  store.py
learner/tests/: test_aggregator.py  test_placeholder.py  test_server.py  test_store.py
runbooks/: README.md
src/: App.tsx  index.css
src/services/: geminiService.ts  nvidiaService.ts
web-ui/: Dockerfile  README.md  index.html  package.json  vite.config.ts
web-ui/src/: App.tsx
(+53 files in other folders)
