[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosre-diagnoser"
version = "0.4.0"
description = "LLM-powered root-cause diagnosis service for the AutoSRE platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "google-generativeai>=0.5.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "ruff==0.4.4",
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "mypy==1.10.0",
    "anyio[trio]>=4.3.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008"]   # fastapi Depends() in function defaults

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
