[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "autosre-learner"
version = "0.1.0"
description = "Outcome tracking and learning loop for the AutoSRE platform"
requires-python = ">=3.11"
dependencies = []
# TODO (future prompt): add sqlalchemy, alembic, httpx, pydantic when learning loop is built

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "ruff==0.4.4",
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "mypy==1.10.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
