[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosre-learner"
version = "0.8.0"
description = "Observational learning loop for the AutoSRE platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "ruff==0.4.4",
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.23.7",
    "mypy==1.10.0",
]

[project.scripts]
autosre-learner = "learner.main:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
